fix(style): change z-index for modal menu

--- a/static/css/header.css
+++ b/static/css/header.css
@@ -263,7 +263,7 @@
 
 .modal,
 .zindex {
-    z-index: 3;
+    z-index: 9999;
 }
 
 .modal-content {
